# SODA-Translation-Tool

./: .gitignore  CLAUDE.md  README.md  index.py  pyproject.toml
src/: dataset_loader.py  processor.py  translator.py  utils.py
